--- a/client/src/style/main.scss
+++ b/client/src/style/main.scss
@@ -5,6 +5,15 @@ body {
   background-color: #cae9ff;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
 .fl {
   display: flex;
   align-items: center;
